// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/overview renders 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="ms-FocusZone css-112 ms-CommandBar root-109"
          data-focuszone-id="FocusZone0"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet ms-CommandBar-primaryCommand primarySet-113"
            role="none"
          >
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Refresh"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Refresh"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Refresh"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__1"
                    >
                      Refresh
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Run trigger"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Run trigger"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Play"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__4"
                    >
                      Run trigger
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone8"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Workflow Properties"
        data-is-focusable={true}
        id="Pivot7-Tab0"
        name="Workflow Properties"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Workflow Properties
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot7-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-workflow-properties"
        >
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Name:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.name
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              State type:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.stateType
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Operation options:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.operationOptions
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Callback URL:
            </span>
            <div>
              <a
                className="ms-Link root-141"
                href="workflowProperties.callbackInfo.value"
                onClick={[Function]}
                rel="noopener"
                target="_blank"
              >
                workflowProperties.callbackInfo.value
              </a>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone13"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Run History"
        data-is-focusable={true}
        id="Pivot12-Tab0"
        name="Run History"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Run History
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot12-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-run-history-filter"
        >
          <div
            className="ms-TextField root-143"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-144"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-145"
                  id="TextField17"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Enter the run identifier to open the run"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            aria-label="Enter the run identifier to open the run"
            className="ms-Button ms-Button--icon is-disabled root-154"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Enter the run identifier to open the run"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-117"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-155"
                data-icon-name="NavigateForward"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
            </span>
          </button>
        </div>
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-158"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-busy={false}
              aria-colcount={5}
              aria-readonly="true"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-112 ms-DetailsHeader root-160"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone25"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-colindex={1}
                    aria-labelledby="header24-identifier-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="identifier"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header24-identifier"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header24-identifier-name"
                        >
                          Identifier
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={2}
                    aria-labelledby="header24-status-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="status"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header24-status"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header24-status-name"
                        >
                          Status
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={3}
                    aria-labelledby="header24-startTime-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="startTime"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 220,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header24-startTime"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header24-startTime-name"
                        >
                          Start time
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={2}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={4}
                    aria-labelledby="header24-duration-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="duration"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header24-duration"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header24-duration-name"
                        >
                          Duration
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={3}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={5}
                    aria-labelledby="header24-contextMenu-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable is-empty root-189"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="contextMenu"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header24-contextMenu"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header24-contextMenu-name"
                        >
                          
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerEnd-169"
                    data-is-focusable={false}
                    data-sizer-index={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-112 focusZone-159"
                    data-focuszone-id="FocusZone26"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview renders a CORS notice 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="ms-FocusZone css-112 ms-CommandBar root-109"
          data-focuszone-id="FocusZone27"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet ms-CommandBar-primaryCommand primarySet-113"
            role="none"
          >
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Refresh"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Refresh"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Refresh"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__28"
                    >
                      Refresh
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Run trigger"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Run trigger"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Play"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__31"
                    >
                      Run trigger
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone35"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Workflow Properties"
        data-is-focusable={true}
        id="Pivot34-Tab0"
        name="Workflow Properties"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Workflow Properties
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot34-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-workflow-properties"
        >
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Name:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.name
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              State type:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.stateType
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Operation options:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.operationOptions
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Callback URL:
            </span>
            <div>
              <a
                className="ms-Link root-141"
                href="workflowProperties.callbackInfo.value"
                onClick={[Function]}
                rel="noopener"
                target="_blank"
              >
                workflowProperties.callbackInfo.value
              </a>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone40"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Run History"
        data-is-focusable={true}
        id="Pivot39-Tab0"
        name="Run History"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Run History
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot39-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-run-history-filter"
        >
          <div
            className="ms-TextField root-143"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-144"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-145"
                  id="TextField44"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Enter the run identifier to open the run"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            aria-label="Enter the run identifier to open the run"
            className="ms-Button ms-Button--icon is-disabled root-154"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Enter the run identifier to open the run"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-117"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-155"
                data-icon-name="NavigateForward"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
            </span>
          </button>
        </div>
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-158"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-busy={false}
              aria-colcount={5}
              aria-readonly="true"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-112 ms-DetailsHeader root-160"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone52"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-colindex={1}
                    aria-labelledby="header51-identifier-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="identifier"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header51-identifier"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header51-identifier-name"
                        >
                          Identifier
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={2}
                    aria-labelledby="header51-status-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="status"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header51-status"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header51-status-name"
                        >
                          Status
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={3}
                    aria-labelledby="header51-startTime-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="startTime"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 220,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header51-startTime"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header51-startTime-name"
                        >
                          Start time
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={2}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={4}
                    aria-labelledby="header51-duration-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="duration"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header51-duration"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header51-duration-name"
                        >
                          Duration
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={3}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={5}
                    aria-labelledby="header51-contextMenu-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable is-empty root-189"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="contextMenu"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header51-contextMenu"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header51-contextMenu-name"
                        >
                          
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerEnd-169"
                    data-is-focusable={false}
                    data-sizer-index={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-112 focusZone-159"
                    data-focuszone-id="FocusZone53"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-MessageBar ms-MessageBar-multiline root-190"
  >
    <div
      className="ms-MessageBar-content content-191"
    >
      <div
        aria-hidden={true}
        className="ms-MessageBar-icon iconContainer-192"
      >
        <i
          aria-hidden={true}
          className="icon-199"
          data-icon-name="Info"
        />
      </div>
      <div
        aria-live="polite"
        className="ms-MessageBar-text text-194"
        id="MessageBar54"
        role="status"
      >
        <span
          className="ms-MessageBar-innerText innerText-195"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview renders a load more button when there are more runs 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="ms-FocusZone css-112 ms-CommandBar root-109"
          data-focuszone-id="FocusZone83"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet ms-CommandBar-primaryCommand primarySet-113"
            role="none"
          >
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Refresh"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Refresh"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Refresh"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__84"
                    >
                      Refresh
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Run trigger"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Run trigger"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Play"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__87"
                    >
                      Run trigger
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone91"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Workflow Properties"
        data-is-focusable={true}
        id="Pivot90-Tab0"
        name="Workflow Properties"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Workflow Properties
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot90-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-workflow-properties"
        >
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Name:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.name
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              State type:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.stateType
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Operation options:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.operationOptions
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Callback URL:
            </span>
            <div>
              <a
                className="ms-Link root-141"
                href="workflowProperties.callbackInfo.value"
                onClick={[Function]}
                rel="noopener"
                target="_blank"
              >
                workflowProperties.callbackInfo.value
              </a>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone96"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Run History"
        data-is-focusable={true}
        id="Pivot95-Tab0"
        name="Run History"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Run History
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot95-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-run-history-filter"
        >
          <div
            className="ms-TextField root-143"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-144"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-145"
                  id="TextField100"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Enter the run identifier to open the run"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            aria-label="Enter the run identifier to open the run"
            className="ms-Button ms-Button--icon is-disabled root-154"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Enter the run identifier to open the run"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-117"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-155"
                data-icon-name="NavigateForward"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
            </span>
          </button>
        </div>
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-158"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-busy={false}
              aria-colcount={5}
              aria-readonly="true"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-112 ms-DetailsHeader root-160"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone108"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-colindex={1}
                    aria-labelledby="header107-identifier-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="identifier"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header107-identifier"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header107-identifier-name"
                        >
                          Identifier
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={2}
                    aria-labelledby="header107-status-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="status"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header107-status"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header107-status-name"
                        >
                          Status
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={3}
                    aria-labelledby="header107-startTime-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="startTime"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 220,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header107-startTime"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header107-startTime-name"
                        >
                          Start time
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={2}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={4}
                    aria-labelledby="header107-duration-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="duration"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header107-duration"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header107-duration-name"
                        >
                          Duration
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={3}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={5}
                    aria-labelledby="header107-contextMenu-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable is-empty root-189"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="contextMenu"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header107-contextMenu"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header107-contextMenu-name"
                        >
                          
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerEnd-169"
                    data-is-focusable={false}
                    data-sizer-index={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-112 focusZone-159"
                    data-focuszone-id="FocusZone109"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="msla-button msla-overview-load-more"
          onClick={[MockFunction]}
        >
          Load more
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview renders an error message 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="ms-FocusZone css-112 ms-CommandBar root-109"
          data-focuszone-id="FocusZone55"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="menubar"
        >
          <div
            className="ms-OverflowSet ms-CommandBar-primaryCommand primarySet-113"
            role="none"
          >
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Refresh"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Refresh"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Refresh"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__56"
                    >
                      Refresh
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              className="ms-OverflowSet-item item-114"
              role="none"
            >
              <button
                aria-label="Run trigger"
                className="ms-Button ms-Button--commandBar ms-CommandBarItem-link root-116"
                data-is-focusable={true}
                name="Run trigger"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                role="menuitem"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-117"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-105 ms-Button-icon icon-119"
                    data-icon-name="Play"
                    style={
                      Object {
                        "fontFamily": undefined,
                      }
                    }
                  />
                  <span
                    className="ms-Button-textContainer textContainer-118"
                  >
                    <span
                      className="ms-Button-label label-120"
                      id="id__59"
                    >
                      Run trigger
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone63"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Workflow Properties"
        data-is-focusable={true}
        id="Pivot62-Tab0"
        name="Workflow Properties"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Workflow Properties
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot62-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-workflow-properties"
        >
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Name:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.name
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              State type:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.stateType
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Operation options:
            </span>
            <span
              className="css-140"
            >
              workflowProperties.operationOptions
            </span>
          </label>
          <label
            className="ms-Label root-139"
          >
            <span
              className="css-140"
            >
              Callback URL:
            </span>
            <div>
              <a
                className="ms-Link root-141"
                href="workflowProperties.callbackInfo.value"
                onClick={[Function]}
                rel="noopener"
                target="_blank"
              >
                workflowProperties.callbackInfo.value
              </a>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ms-FocusZone css-112 ms-Pivot root-124"
      data-focuszone-id="FocusZone68"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-133"
        data-content="Run History"
        data-is-focusable={true}
        id="Pivot67-Tab0"
        name="Run History"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-134"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-130"
          >
            <span
              className="ms-Pivot-text text-131"
            >
               
              Run History
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot67-Tab0"
      className="itemContainer-125"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="msla-run-history-filter"
        >
          <div
            className="ms-TextField root-143"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-144"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-145"
                  id="TextField72"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Enter the run identifier to open the run"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            aria-label="Enter the run identifier to open the run"
            className="ms-Button ms-Button--icon is-disabled root-154"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Enter the run identifier to open the run"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-117"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-155"
                data-icon-name="NavigateForward"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
            </span>
          </button>
        </div>
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-158"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-busy={false}
              aria-colcount={5}
              aria-readonly="true"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-112 ms-DetailsHeader root-160"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone80"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-colindex={1}
                    aria-labelledby="header79-identifier-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="identifier"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header79-identifier"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header79-identifier-name"
                        >
                          Identifier
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={2}
                    aria-labelledby="header79-status-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="status"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header79-status"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header79-status-name"
                        >
                          Status
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={3}
                    aria-labelledby="header79-startTime-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="startTime"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 220,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header79-startTime"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header79-startTime-name"
                        >
                          Start time
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={2}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={4}
                    aria-labelledby="header79-duration-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-176"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="duration"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header79-duration"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header79-duration-name"
                        >
                          Duration
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerStart-168"
                    data-is-focusable={false}
                    data-sizer-index={3}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-colindex={5}
                    aria-labelledby="header79-contextMenu-name"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable is-empty root-189"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="contextMenu"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-184"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-182"
                        id="header79-contextMenu"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-183"
                          id="header79-contextMenu-name"
                        >
                          
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-167 cellSizerEnd-169"
                    data-is-focusable={false}
                    data-sizer-index={4}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-112 focusZone-159"
                    data-focuszone-id="FocusZone81"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-MessageBar ms-MessageBar--error ms-MessageBar-singleline root-200"
        >
          <div
            className="ms-MessageBar-content content-191"
          >
            <div
              aria-hidden={true}
              className="ms-MessageBar-icon iconContainer-192"
            >
              <i
                aria-hidden={true}
                className="icon-204"
                data-icon-name="ErrorBadge"
              />
            </div>
            <div
              aria-live="assertive"
              className="ms-MessageBar-text text-194"
              id="MessageBar82"
              role="alert"
            >
              <span
                className="ms-MessageBar-innerText innerText-202"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
